--- a/00_Ch_1_Linear_Algebraic_Systems/022-linsys-matvec.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/022-linsys-matvec.ipynb
@@ -62,7 +62,13 @@
     "- what matrices and vectors are\n",
     "- what arithmetic operations are allowed when working with matrices and vectors\n",
     "- how to perform arithmetic operations on matrices and vectors\n",
-    "- how to represent linear system of equations using matrices and vectors"
+    "- how to represent linear system of equations using matrices and vectors\n",
+    "\n",
+    "## What's new from Math 1410\n",
+    "A lot of this page is reviewing mechanics that you've arleady seen in Math 1410.  If you feel like you remember all of this material well and just want to skip to the new stuff, here are some shortcuts:\n",
+    "- Matrix-vector multiplication as a [linear combination of columns](#mat-vec-new)\n",
+    "- Matrix-matrix multiplication as [batch matrix-vector multiplication](#batch)\n",
+    "- [Linear systems in matrix vector notation](mat-vec-linsys)"
    ]
   },
   {
@@ -413,7 +419,8 @@
     "Since $\\vv b$ and $\\vv x$ are column vectors, we only have the first index $i$ since the second index $j$ is always $1$.\n",
     "```\n",
     "\n",
-    "#### Matrix-vector multiplication as linear combinations of columns\n",
+    "(mat-vec-new)=\n",
+    "```{important} Matrix-vector multiplication as linear combinations of columns\n",
     "An alternative expression for the matrix-vector product $A\\vv x$ can be obtained in terms of a weighted sum of the columns of $A$ with weights given by the entries of $\\vv x$.  More precisely, if we let $\\vv a_1, \\vv a_2, \\cdots, \\vv a_n$ to be the columns of $A$ so that \n",
     "$$\n",
     "A = \\bm \\vv a_1 & \\vv a_2 & \\cdots & \\vv a_n \\em,\n",
@@ -423,17 +430,19 @@
     "\\vv b = x_1 \\vv a_1 + x_2 \\vv a_2 + \\cdots + x_n \\vv a_n,\n",
     "$$\n",
     "that is, $\\vv b$ is computed by adding the columns of $A$ weighted by the entries of $\\vv x$. This will be useful later when we discuss about the _column span of a matrix_ $A$.   \n",
+    "```\n",
     "\n",
-    "\n",
-    "### Matrix-matrix multiplication as batch matrix-vector multiplication\n",
-    "(matmul-def1)=\n",
+    "(batch)= \n",
+    "```{important} Matrix-matrix multiplication as batch matrix-vector multiplication\n",
     "Another convenient way of computing matrix products $C = AB$ is given in terms of matrix-vector products between $A$ and the columnbs $\\vv b_i$ of $B$.\n",
     "If A is an $m \\times n$ matrix, and if $B$ is an $n \\times p$ matrix with columns $\\vv b_1,\\dots,\\vv b_p$, then the matrix product $AB$ is then the $m \\times p$ matrix whose columns are $A\\vv b_1, A\\vv b_2,\\dots, A\\vv b_p$, that is,\n",
-    "```{math}\n",
+    ":::math\n",
     ":label: matmul-def\n",
     "C = AB = A\\bm \\vv b_1 & \\vv b_2 & \\cdots & \\vv b_p\\em = \\bm A\\vv b_1 & A\\vv b_2 & \\cdots & A\\vv b_p\\em.\n",
-    "```\n",
-    "The $k^{th}$ column of $C$ is the matrix-vector product of $A$ and the $k^{th}$ column of $B$, and so we can think of the matrix-matrix product as conducting $p$ matrix-vector products as a _batch_ in parallel."
+    ":::\n",
+    "\n",
+    "The $k^{th}$ column of $C$ is the matrix-vector product of $A$ and the $k^{th}$ column of $B$, and so we can think of the matrix-matrix product as conducting $p$ matrix-vector products as a _batch_ in parallel.\n",
+    "```"
    ]
   },
   {
@@ -704,6 +713,7 @@
     "tags": []
    },
    "source": [
+    "(mat-vec-linsys)=\n",
     "## Linear Systems in Matrix-Vector Notation\n",
     "Let's use our new matrix-vector tools to compactly write out systems of linear equations.  Recall that a general linear system of $m$ equations in $n$ unknowns takes the form\n",
     "\\begin{equation}\n",
