Made syntatical/grammatical and some layout changes to how content was organized

--- a/00_Linear_Algebraic_Systems/020-linsys-intro.ipynb
+++ b/00_Linear_Algebraic_Systems/020-linsys-intro.ipynb
@@ -59,10 +59,10 @@
     "\n",
     "By the end of this chapter, you should know:\n",
     "- how to solve small systems of linear equations by hand using _Gaussian Elimination_\n",
-    "- the basic concepts of scalar, vector, and matrix\n",
+    "- what a scalar, vector and matrix are\n",
     "- the fundamentals of matrix arithmetic\n",
-    "- how to compute inverses of small (2 x 2) matrices by hand, and understand the role of matrix inverses in solving systems of linear equations\n",
-    "- how to solve large systems of linear equations by computing the _LU decomposition_ of a matrix, and how this relates to forward elimination and back substitution\n",
+    "- how to compute inverses of small (2 x 2) matrices by hand and use them to solve small systems of linear equations\n",
+    "- how to solve larger systems of linear equations by computing the _LU Decomposition_ of a matrix, and how this relates to _Gaussian Elimination_\n",
     "- how to implement all of the above in Python using the standard computing package `NumPy`"
    ]
   },
@@ -72,7 +72,7 @@
    "metadata": {},
    "source": [
     "## Motivation: Why Linear Systems?\n",
-    "At this point, you might be wondering why an entire semester is devoted to solving systems of linear equations: after all, the world isn't linear, and already saw how $y=mx + b$ works in high-school.  What more to it could there be?  Well here's a dirty little secret that ``big science'' doesn't want you to know: we (as mathematicians and engineers) only really know how to deal with linear systems, and so a typical approach to solving pretty much _anything_ is to take a complicated problem and hammer away at it until you've reduced things to solving systems of linear equations.  Now, these systems of linear equations might be very high-dimensional (involving thousands, millions, or even billions of parameters), and it may not be obvious how to get them, but they're there.  A completely non-exhaustive list of where systems of linear equations appear include [economics](https://en.wikipedia.org/wiki/Input%E2%80%93output_model), [internet search](https://en.wikipedia.org/wiki/PageRank), [computational fluid dynamics](https://en.wikipedia.org/wiki/Computational_fluid_dynamics), [circuits](https://en.wikipedia.org/wiki/Kirchhoff%27s_circuit_laws), and [robot motion planning](https://en.wikipedia.org/wiki/Spline_interpolation).  We'll see a few simplified examples of these applications next before diving into the technical meat of this lecture."
+    "At this point, you might be wondering why an entire semester is devoted to solving systems of linear equations: after all, the world isn't linear, and already saw how $y=mx + b$ works in high-school.  What more to it could there be?  Well here's a dirty little secret that ``big science'' doesn't want you to know: we (as mathematicians and engineers) only really know how to deal with linear systems, and so a typical approach to solving pretty much _anything_ is to take a complicated problem and hammer away at it until you've reduced things to solving systems of linear equations.  Now, these systems of linear equations might be very high-dimensional (involving thousands, millions, or even billions of coefficients and unknowns), and it may not be obvious how to get them, but they're there.  A completely non-exhaustive list of where systems of linear equations appear include [economics](https://en.wikipedia.org/wiki/Input%E2%80%93output_model), [internet search](https://en.wikipedia.org/wiki/PageRank), [computational fluid dynamics](https://en.wikipedia.org/wiki/Computational_fluid_dynamics), [circuits](https://en.wikipedia.org/wiki/Kirchhoff%27s_circuit_laws), and [robot motion planning](https://en.wikipedia.org/wiki/Spline_interpolation).  We'll see a few simplified examples of these applications next before diving into the technical meat of this lecture."
    ]
   },
   {
@@ -157,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
