--- a/00_Linear_Algebraic_Systems/021-linsys-gauss.ipynb
+++ b/00_Linear_Algebraic_Systems/021-linsys-gauss.ipynb
@@ -61,7 +61,7 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- what a linear equation is, how to identify one, and how they combine to form a system of linear equations (or linear system)\n",
+    "- what a linear equation is, how to identify one, and how they combine to form a system of linear equations (often called a linear system)\n",
     "- what a solution set is, and the kinds of solution sets a linear system can have\n",
     "- how to solve _most_ small systems of linear equations by hand using _Gaussian Elimination_"
    ]
@@ -115,7 +115,7 @@
     "\\end{eqnarray}\n",
     "which is a system of three equations in three unknowns.\n",
     "\n",
-    "A _solution_ of the system is a list $(s_1,s_2,\\dots,s_n)$ of numbers that makes each equation a true statement when the values $s_1,\\dots,s_n$ are substituted for $x_1,\\dots,x_n$, respectively.  For instance, $(-3,2,1)$ is a solution of system [](#simple-linsys00) because, when these values are substituted in [](#simple-linsys00) for $x_1,x_2,x_3$, respectively, the equations simplify to $2=2$, $7=7$, and $3=3$.  The set of all possible solutions is called the _solution set_ of the linear system.  We state an important fact regarding the solution set of linear systems that we will understand very deeply by the end of this chapter:\n",
+    "A _solution_ of the system is an ordered list $(s_1,s_2,\\dots,s_n)$ of numbers that makes each equation a true statement when the values $s_1,\\dots,s_n$ are substituted for $x_1,\\dots,x_n$, respectively.  For instance, $(-3,2,1)$ is a solution of system [](#simple-linsys00) because, when these values are substituted in [](#simple-linsys00) for $x_1,x_2,x_3$, respectively, the equations simplify to $2=2$, $7=7$, and $3=3$.  The set of all possible solutions is called the _solution set_ of the linear system.  We state an important fact regarding the solution set of linear systems that we will understand very deeply by the end of this chapter:\n",
     "\n",
     ":::{important} Solution Set for Linear Systems\n",
     "A system of linear equations has\n",
@@ -157,15 +157,19 @@
     "Adding multiples of one equation to another equation does not change the solution set\n",
     ":::\n",
     "\n",
-    "Before continuing, you might try to convince yourself that this observation is true. Our goal is to apply [](#linop1) judiciously to transform the system of linear equations [](#simple-linsys) into a much simpler one that is easy to solve but still has the same solutions as the original.  Any linear system that is derived from the original system by successive application of such operations will be called an _equivalent system_.  An important property is that _equivalent systems have the same solutions._\n",
+    ":::{important}\n",
+    "Many will be familiar with this [](#linop1) from Algebra I or II, but for this class it will be important to understand why this is true. Can you explain why any solution to a linear system where multiples of one equation were added to another equation is a solution to the original system (and vice versa)?\n",
+    ":::\n",
+    "\n",
+    "Our goal is to apply [](#linop1) judiciously to transform the system of linear equations [](#simple-linsys) into a much simpler one that is easy to solve but still has the same solutions as the original.  Any linear system that is derived from the original system by successive application of such operations will be called an _equivalent system_.  An important property is that _equivalent systems have the same solutions._\n",
     "\n",
     "Our strategy will be to successively eliminate variables in our equations in order of appearance.  So, here, our first step is to eliminate the first variable, $x_1$, from the second equation.  We'll do that by subtracting twice the first equation from the second:\n",
     "$$\n",
     "\\begin{array}{lrl}\n",
-    "\\text{[second equation]} & 2x_1+6x_2+x_3 & =7 \\\\\n",
-    "\\text{-2[first equation]} & -2\\left[x_1+2x_2+x_3 \\right. & \\left. = 2\\right]\\\\\n",
+    "\\hspace{.65cm}\\text{[second equation]} & 2x_1+6x_2+x_3 & =7 \\\\\n",
+    "\\text{-2 x [first equation]} & -2\\left[x_1+2x_2+x_3 \\right. & \\left. = 2\\right]\\\\\n",
     "\\hline \\\\\n",
-    "\\text{[updated equation]} & 0x_1 + 2x_2 - x_3 & = 3,\n",
+    "\\hspace{.65cm}\\text{[updated equation]} & 0x_1 + 2x_2 - x_3 & = 3,\n",
     "\\end{array}\n",
     "$$\n",
     "so that now, our equivalent system of linear equations is given by\n",
@@ -342,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
