--- a/00_Linear_Algebraic_Systems/022-linsys-matvec.ipynb
+++ b/00_Linear_Algebraic_Systems/022-linsys-matvec.ipynb
@@ -59,7 +59,7 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- what are matrices and vectors\n",
+    "- what scalars, vectors, and matrices are\n",
     "- what arithmetic operations are allowed when working with matrices and vectors\n",
     "- how to perform arithmetic operations on matrices and vectors\n",
     "- how to represent linear system of equations using matrices and vectors"
@@ -76,6 +76,9 @@
     "tags": []
    },
    "source": [
+    "## Scalars\n",
+    "Since we are expanding our mathemtical toolkit, it's going to be important that we be precise about what objects we are talking about at all times. For this reason, the term _scalar_ is assigned to \"normal\" numbers that stand alone. The term _scalar_ comes from the fact that if you multiply a scalar with a vector it essentially \"scales\" its size up or down.\n",
+    "\n",
     "## Matrices and Vectors\n",
     "A _matrix_ is a rectangular array of numbers.  For example\n",
     "\\begin{equation}\n",
@@ -92,7 +95,9 @@
     "a_{m1} & a_{m2} & \\cdots & a_{mn}\n",
     "\\end{bmatrix}\n",
     "\\end{equation}\n",
-    "for a generic matrix $A$ of size $m \\times n$ (read \"$m$ by $n$\"), where $m$ denotes the number of _rows_ in $A$ and $n$ denotes the number of _columns_[^cols].  Therefore, the preceding examples of matrices have respective sizes $2 \\times 3$, $4 \\times 2$, and $1 \\times 3$.  A matrix is _square_ if $m=n$, i.e., it has the same number of rows as columns.  A _column vector_ is an $m \\times 1$ matrix, while a _row vector_ is a $1 \\times n$ matrix.  While these might seem like they are the same thing, they very much are not!  Column vectors end up playing a much more important role in our story, and so whenever we just say \"vector\" we will always mean a column vector.  A $1 \\times 1$ matrix, which has a single entry, is both a column and row vector, and as we'll see later, behaves like an ordinary _scalar_ number.\n",
+    "for a generic matrix $A$ of size $m \\times n$ (read \"$m$ by $n$\"), where $m$ denotes the number of _rows_ in $A$ and $n$ denotes the number of _columns_[^cols].  Therefore, the preceding examples of matrices have respective sizes $2 \\times 3$, $4 \\times 2$, and $1 \\times 3$.  A matrix is _square_ if $m=n$, i.e., it has the same number of rows as columns.  A _column vector_ is an $m \\times 1$ matrix, while a _row vector_ is a $1 \\times n$ matrix. A $1 \\times 1$ matrix, which has a single entry, is both a column and row vector, and as we'll see later, behaves like an ordinary _scalar_ number.\n",
+    "\n",
+    "While column and row vectors might seem like they are the same thing, they very much are not!  Column vectors end up playing a much more important role in our story, and so whenever we just say \"vector\" we will always mean a column vector. \n",
     "\n",
     "The number that lies in the $i$th row and $j$th column of $A$ is called the $(i,j)$ _entry_ of $A$, and is denoted by $a_{ij}$.  The row index always appears first and the column index second.  Each column of $A$ is a $m \\times 1$ vector, which we denote by $\\vv a_1, \\dots \\vv a_n$. It will often be convenient to write a matrix in terms of its columns:\n",
     "```{math}\n",
@@ -217,7 +222,7 @@
    "metadata": {},
    "source": [
     "### Scalar multiplication\n",
-    "A _scalar_ is a fancy name for an ordinary number.  For now, we restrict ourselves to scalars, vectors, and matrices with _real_ entries, but we will eventually extend these ideas to complex numbers and matrices with complex entries.  Although technically not the same thing, we will treat the $1 \\times 1$ matrix $[c]$ and the scalar $c \\in \\R$ as a scalar,[^notation] that is to say as an ordinary number, so we will drop the brackets. _Scalar multiplication_ takes a scalar $c$ and an $m \\times n$ matrix $A$ an computes the $m \\times n$ matrix $B = cA$ by multiplying each entry of $A$ by $c$.  For example:\n",
+    "Recall that a _scalar_ is a fancy name for an ordinary number.  For now, we restrict ourselves to scalars, vectors, and matrices with _real_ entries, but we will eventually extend these ideas to complex numbers and matrices with complex entries.  Although technically not the same thing, we will treat the $1 \\times 1$ matrix $[c]$ and the scalar $c \\in \\R$ as a scalar,[^notation] that is to say as an ordinary number, so we will drop the brackets. _Scalar multiplication_ takes a scalar $c$ and an $m \\times n$ matrix $A$ an computes the $m \\times n$ matrix $B = cA$ by multiplying each entry of $A$ by $c$.  For example:\n",
     "$$\n",
     "c = 3, \\quad A = \\bm 1 & 2 \\\\ -1 & 0 \\em, \\quad cA = 3\\bm 1 & 2 \\\\ -1 & 0 \\em=\\bm 3 & 6 \\\\ -3 & 0\\em.\n",
     "$$\n",
@@ -300,6 +305,8 @@
     "\\end{bmatrix} = a_1x_1 + a_2x_2 + \\cdots a_nx_n = \\sum_{k=1}^n a_kx_k\n",
     "\\end{equation}\n",
     "\n",
+    "For now we will call this the _vector product_\n",
+    "\n",
     "\n",
     "````{exercise}  Vector products\n",
     ":label: vector_prod_ex\n",
@@ -355,13 +362,20 @@
     "$$\n",
     "c_{ij} = \\sum_{k=1}^na_{ik}b_{kj} \n",
     "$$\n",
+    "\n",
     "The $(i, j)^{th}$ entry of $C$ is the vector product of the $i^{th}$ row of $A$ and $j^{th}$ column of $B$. \n",
+    "\n",
+    "\n",
+    ":::{warning}\n",
+    "This definition will feel very contrived, even for those who have worked with linear algebra before. Humans had been working with matrices for [thousands of years](https://people.math.harvard.edu/~knill/history/matrix/) before the power matrix multiplication came about. However, getting familiar with the computations below will hopefully get us to the deeper implications of matrix multiplicaiton a little quicker!\n",
+    ":::\n",
     "\n",
     "An important special case of matrix-matrix multiplication is _matrix-vector products_. Let $\\vv x$ be an $n \\times 1$ column vector. Then, the matrix-vector product $\\vv b = A \\vv x$ is an $m\\times 1$ column vector, where the entries of $\\vv b$ are\n",
     "$$\n",
     "b_{i} = \\sum_{k=1}^na_{ik}x_{i} \n",
     "$$\n",
     "\n",
+    "A key idea in linear algebra is that Matrices are functions that _tranform_ one vector into another. In particular, in the example above we see that because $A$ is a $m \\times n$ matrix, it transforms an $n \\times 1$ vector into a $m \\times 1$ vector.\n",
     "```{note}\n",
     "Since $\\vv b$ and $\\vv x$ are column vectors, we only have the first index $i$ since the second index $j$ is always $1$.\n",
     "```\n",
@@ -455,11 +469,11 @@
     "\n",
     "$A = \\bm 1 & 1 \\\\ 1 & 0 \\em, B = \\bm 2 & 4 & 1 \\\\ 0 & 3 & -1 \\em, \\vv x = \\bm 13\\\\ 8 \\\\ 2\\em, \\vv y = \\bm 1 & 2\\em$\n",
     "\n",
-    "a.  $AB, BA$\n",
+    "a.  $AB,\\hspace{.1cm} BA$\n",
     "\n",
     "b.  $B \\vv x$\n",
     "\n",
-    "c.  $\\vv y B, \\vv y B \\vv x$\n",
+    "c.  $\\vv y B,\\hspace{.1cm} \\vv y B \\vv x$\n",
     "\n",
     "```{solution} matrix-multiplication-ex1 \n",
     ":class: dropdown \n",
@@ -484,28 +498,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "dce266e0-5211-4d76-98db-aa1215562d0e",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "product: \n",
-      " [[ 8]\n",
-      " [17]]\n",
-      "\n",
-      "AB: \n",
-      " [[2 7 0]\n",
-      " [2 4 1]] \n",
-      "Bx: \n",
-      " [[60]\n",
-      " [22]] \n",
-      "yB: \n",
-      " [[ 2 10 -1]] \n",
-      "yBx: \n",
-      " [[104]]\n"
+     "ename": "NameError",
+     "evalue": "name 'A' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Matrix-vector with old A, c\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m product \u001b[38;5;241m=\u001b[39m \u001b[43mA\u001b[49m \u001b[38;5;241m@\u001b[39m c \u001b[38;5;66;03m# multipying matrix A with column-vector c\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mproduct: \u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, product)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Try A @ vec and notice the difference in the size of the result\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# matrix vector multiplication for above exercises\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'A' is not defined"
      ]
     }
    ],
@@ -662,14 +667,6 @@
    "source": [
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/022-linsys-matvec.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e3493d91-82a1-4820-8cd8-a137bc9900e5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -692,7 +689,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
