--- a/00_Linear_Algebraic_Systems/025-linsys-inverses.ipynb
+++ b/00_Linear_Algebraic_Systems/025-linsys-inverses.ipynb
@@ -14,7 +14,7 @@
     "---\n",
     "title: Matrix inverses\n",
     "subject:  Linear Algebraic Systems\n",
-    "subtitle: reciprocal of matrices\n",
+    "subtitle: The \"reciprocal\" of matrices\n",
     "short_title: Matrix inverses\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
@@ -551,7 +551,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
