--- a/00_Linear_Algebraic_Systems/026-linsys-general.ipynb
+++ b/00_Linear_Algebraic_Systems/026-linsys-general.ipynb
@@ -14,7 +14,7 @@
     "---\n",
     "title: General Linear Systems\n",
     "subject:  Linear Algebraic Systems\n",
-    "subtitle: solving with nonsingular coefficient matrices\n",
+    "subtitle: Solving with nonsingular coefficient matrices\n",
     "short_title: General Linear Systems\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
@@ -61,9 +61,9 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- row echelon form of matrices\n",
-    "- Rank of a matrix\n",
-    "- solving linear systems using row echelon form"
+    "- the row echelon form of matrices\n",
+    "- what the rank of a matrix signifies\n",
+    "- how to solve matrix equations using row echelon form"
    ]
   },
   {
@@ -128,7 +128,7 @@
     "```\n",
     "\n",
     "```{prf:theorem}\n",
-    "Every matrix can be reduced to row echelon form by a sequence of row operations ([scaling and adding](./023-linsys-gauuss.ipynb#rowop1), [swapping](./024-linsys-perms.ipynb#rowop2)).\n",
+    "Every matrix can be reduced to row echelon form by a sequence of row operations ([scaling and adding](./021-linsys-gauss.ipynb#rowop1), or [swapping](./024-linsys-perms.ipynb#rowop2)).\n",
     "```\n",
     "\n",
     "```{note}Matrix notation\n",
@@ -529,7 +529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
