--- a/00_Linear_Algebraic_Systems/023-linsys-gauss.ipynb
+++ b/00_Linear_Algebraic_Systems/023-linsys-gauss.ipynb
@@ -59,9 +59,9 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- Gaussian elimination for regular matrices using matrix representation\n",
-    "- what are pivots in a matrix\n",
-    "- algorithm to solve linear equations using Gaussian elimination and back substitution"
+    "- the algorithm for Gaussian elimination in matrix form\n",
+    "- what pivots are\n",
+    "- how to use this knowledge to solve linear equations\n"
    ]
   },
   {
@@ -413,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
