--- a/00_Linear_Algebraic_Systems/023a-linsys-LU.ipynb
+++ b/00_Linear_Algebraic_Systems/023a-linsys-LU.ipynb
@@ -63,8 +63,8 @@
     "- what the $LU$ factorization of a matrix is\n",
     "- how to apply $LU$ factorization to solve systems of linear equations\n",
     "- how to represent row operations using elementary matrices\n",
-    "- LU factorization using elementary matrix actions\n",
-    "- how LU factorization relates to Gaussian Elimination (forward elimination and back substitution)"
+    "- $LU$ factorization using elementary matrix actions\n",
+    "- how $LU$ factorization relates to Gaussian Elimination (forward elimination and back substitution)"
    ]
   },
   {
@@ -324,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
