Made syntatical/grammatical and some layout changes to how content was organized

--- a/00_Linear_Algebraic_Systems/022-linsys-matvec.ipynb
+++ b/00_Linear_Algebraic_Systems/022-linsys-matvec.ipynb
@@ -367,7 +367,7 @@
     "\n",
     "\n",
     ":::{warning}\n",
-    "This definition will feel very contrived, even for those who have worked with linear algebra before. Humans had been working with matrices for [thousands of years](https://people.math.harvard.edu/~knill/history/matrix/) before the power matrix multiplication came about. However, getting familiar with the computations below will hopefully get us to the deeper implications of matrix multiplicaiton a little quicker!\n",
+    "This definition might feel very contrived, even for some more experienced folks. Mathematicians have been using matrices for [centuries](https://people.math.harvard.edu/~knill/history/matrix/) before they realized the power matrix multiplication. However, getting familiar with the computations first will hopefully get us to the deeper implications of matrix multiplicaiton a little quicker!\n",
     ":::\n",
     "\n",
     "An important special case of matrix-matrix multiplication is _matrix-vector products_. Let $\\vv x$ be an $n \\times 1$ column vector. Then, the matrix-vector product $\\vv b = A \\vv x$ is an $m\\times 1$ column vector, where the entries of $\\vv b$ are\n",
