--- a/00_Ch_1_Linear_Algebraic_Systems/023a-linsys-LU.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/023a-linsys-LU.ipynb
@@ -72,10 +72,16 @@
    "id": "a2378cbe-20bd-404d-baa2-d111b1877e72",
    "metadata": {},
    "source": [
-    "### Solving Linear Equations with $LU$-factorizations\n",
-    "We've made a lot of progress, but we still do not have a way of dealing with cases where the matrix $A$ is not regular, i.e., when it has pivots that are zero.  We'll defer that situation for a little bit still, and instead look at why we bothered with $LU$-factorizations to begin with!  Suppose we are interested in solving a system of linear equations $A\\vv x = \\vv b$, and we assume that $A$ is regular so that we can apply the algorithm above to compute an $LU$-facotrization of $A$, i.e., we find a lower triangular matrix $L$ and an upper triangular matrix $U$ so that $A=LU$.  Then our linear system becomes $LU\\vv x = \\vv b$.  \n",
+    "### We like triangular matrices\n",
+    "A theme we've exploited so far is that if we have an upper triangular system of equations, i.e., if $U\\vv x = \\vv c$ for $U$ and upper triangular matrix, then finding a solution $\\vv x$ is easy via back substitution.  Hopefully you believe that a _lower_ triangular system of equations of the form $L\\vv x = \\vv c$ for $L$ a lower triangular matrix is also easy to solve via forward substitution.  This section starts with the following question:\n",
     "\n",
-    "Neat, but so what?  Well we know how to solve linear systems that look like $U\\vv x = \\vv z$, for $U$ upper triangular, by Back Substitution, and while we haven't seen it explicitly, hopefully you believe that we can solve linear systems that look like $L\\vv y = \\vv c$, for $L$ lower triangular, by _Forward Substitution_.[^fsub]  Our strategy will be to turn solving $A\\vv x = \\vv b$ into solving a lower triangular system by Forward Substitution, and then an upper triangular system by Back Substitution, both things we know how to do easily!  With that in mind, let us introduce a new intermediate variable $\\vv z = U \\vv x$.  Then I can find the solution to $A\\vv x = LU\\vv x = \\vv b$ by solving\n",
+    "> Is it easy to solve a system of linear equations of the form $LU \\vv x = \\vv b$, where $L$ is a lower triangular matrix and $U$ is an upper triangular matrix?\n",
+    "\n",
+    "<!-- We've made a lot of progress, but we still do not have a way of dealing with cases where the matrix $A$ is not regular, i.e., when it has pivots that are zero.  We'll defer that situation for a little bit still, and instead look at why we bothered with $LU$-factorizations to begin with!  Suppose we are interested in solving a system of linear equations $A\\vv x = \\vv b$, and we assume that $A$ is regular so that we can apply the algorithm above to compute an $LU$-facotrization of $A$, i.e., we find a lower triangular matrix $L$ and an upper triangular matrix $U$ so that $A=LU$.  Then our linear system becomes $LU\\vv x = \\vv b$.  \n",
+    "\n",
+    "Neat, but so what?   -->\n",
+    "\n",
+    "This looks like something we might be able to handle, since we know how to solve linear systems that look like $U\\vv x = \\vv z$, for $U$ upper triangular, by Back Substitution, and how to solve linear systems that look like $L\\vv y = \\vv c$, for $L$ lower triangular, by _Forward Substitution_.[^fsub]  Our strategy for solving $LU\\vv x = \\vv b$ will be to tackle the problem in two steps: first, we solve an intermediate lower triangular system by Forward Substitution, and then use the solution to that intermediate problem to define an upper triangular system, which we solve by Back Substitution!  With that strategy in mind, let's introduce a new intermediate variable $\\vv z = U \\vv x$.  Then we can find the solution to $LU\\vv x = \\vv b$ by solving\n",
     "$$\n",
     "L\\vv z = \\vv b,\n",
     "$$\n",
@@ -83,17 +89,19 @@
     "$$\n",
     "U \\vv x = \\vv z,\n",
     "$$\n",
-    "for $\\vv x$ via Backward Substitution.  If we piece everything together, we see that $\\vv x$ is indeed a solution to our original equation $A\\vv x = \\vv b$ because\n",
+    "for $\\vv x$ via Backward Substitution.  If we piece everything together, we see that $\\vv x$ is indeed a solution to our original equation $LU\\vv x = \\vv b$ because\n",
     "$$\n",
-    "A\\vv x = L\\underbrace{U \\vv x}_{=\\vv z}= \\underbrace{L\\vv z}_{=\\vv b} = \\vv b.\n",
+    "L\\underbrace{U \\vv x}_{=\\vv z}= \\underbrace{L\\vv z}_{=\\vv b} = \\vv b.\n",
     "$$\n",
     "\n",
-    "A neat algorithm applying LU factorization to solve system of linear equations is as follows.\n",
+    "We summarize the above in the following algorithm for solving linear systems of the form $LU\\vv x = \\vv b$, where $L$ is a lower triangular matrix, and $U$ is an upper triangular matrix:\n",
     "\n",
     "[^fsub]: Forward Substitution is exactly what it sounds like.  To solve $L\\vv y = \\vv c$, when $L$ is lower triangular, we start at the top row and set $y_1 = c_1/l_{11}$. We then move down a row, and solve $l_{21}y_1 + l_{22}y_2 = c_2$ by plugging in $y_1$ and solving for $y_2$.  We continue in this manner until we've solved for $\\vv y$. \n",
     "\n",
     "1. Solve $L\\vv z = \\vv b$ via forward substitution.\n",
-    "2. Using $\\vv z$, solve $U\\vv x = \\vv z$ via back substitution."
+    "2. Using $\\vv z$, solve $U\\vv x = \\vv z$ via back substitution.\n",
+    "\n",
+    "The above is all good and well, but there's a catch!  Most linear systems we care about are posted of the form $A\\vv x = \\vv b$, where $A$ is neither lower nor upper triangular.  What we'll show in this section is an amazing fact of linear algebra: any matrix $A$ that is regular can be factored as a product of a lower triangular matrix $L$ and an upper triangular matrix $U$ such that $A=LU$.  This _matrix factorization_, the first (but not the last!) we will see in this class, is called the $LU$ factorization of a matrix (a descriptive, if not particularly creative, name)."
    ]
   },
   {
@@ -102,6 +110,7 @@
    "metadata": {},
    "source": [
     "## Elementary Matrices\n",
+    "\n",
     "\n",
     "It turns out that our strategy of adding equations together is in fact an operation that can be realized by matrix multiplication.  Our starting point will be to introduce a the idea of an _elementary matrix_, which encodes the corresponding elementary operation.  So far we've only seen the elementary operation of adding equations together, which we recall, is equivalent to adding rows of the augmented matrix $M = [A \\, | \\, \\vv b]$ together, but we'll see other types of operations shortly.  The definition below will work for all of them.\n",
     "\n",
