--- a/00_Ch_1_Linear_Algebraic_Systems/023a-linsys-LU.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/023a-linsys-LU.ipynb
@@ -111,8 +111,10 @@
    "source": [
     "## Elementary Matrices\n",
     "\n",
+    "Our starting point is the following crucial idea that underpins much of linear algebra:\n",
+    "> Operations on the rows and columns of a matrix can be realized by matrix multiplication.\n",
     "\n",
-    "It turns out that our strategy of adding equations together is in fact an operation that can be realized by matrix multiplication.  Our starting point will be to introduce a the idea of an _elementary matrix_, which encodes the corresponding elementary operation.  So far we've only seen the elementary operation of adding equations together, which we recall, is equivalent to adding rows of the augmented matrix $M = [A \\, | \\, \\vv b]$ together, but we'll see other types of operations shortly.  The definition below will work for all of them.\n",
+    "So for example, our strategy in previous sections of adding equations together is in fact an operation that can be realized by matrix multiplication.  Our starting point will be to introduce a the idea of an _elementary matrix_, which encodes the corresponding elementary operation.  So far we've only seen the elementary operation of adding equations together, which we recall, is equivalent to adding rows of the augmented matrix $M = [A \\, | \\, \\vv b]$ together, but we'll see other types of operations shortly.  The definition below will work for all of them.\n",
     "\n",
     "```{prf:definition} Elementary Matrix\n",
     ":label: elementary\n",
